<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="z1840816.niu.edu.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/addString"
        app:showAsAction="never|ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="200"
        android:title="@string/deleteString"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="300"
        android:title="@string/updateString"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_resetTotal"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="300"
        android:title="Reset"
        app:showAsAction="never" />
</menu>
